<resources>
    <string name="app_name">Picturium</string>
    <string name="searchbar_hint">Search</string>
    <string name="upload_btn_description">Upload images</string>
    <string name="profile_btn_description">Access your profile</string>
    <string name="filter_button_section_hot">Hot</string>
    <string name="filter_button_section_user">User</string>
    <string name="filter_button_section_top">Top</string>
    <string name="filter_button_window_day">Day</string>
    <string name="filter_button_window_week">Week</string>
    <string name="filter_button_window_month">Month</string>
    <string name="filter_button_window_year">Year</string>
    <string name="filter_button_window_all">All</string>
    <string name="profile_page_title">Profile</string>
    <string name="profile_logout_btn_description">Logout</string>
    <string name="profile_login_button">Login</string>
    <string name="filter_button_sort_time">Time</string>
    <string name="filter_button_sort_viral">Viral</string>
    <string name="filter_button_sort_top">Top</string>
    <string name="details_upvote_button">upVote</string>
    <string name="details_downvote_button">downVote</string>
    <string name="details_favorite_button">favorite</string>
    <string name="details_retry_button">Tap to retry</string>
    <string name="swipe_up_to_refresh">Swipe up to refresh</string>
</resources>