<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="horizontal"
    android:theme="@style/AppTheme.TopBar">

    <ImageButton
        android:id="@+id/profile_btn"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_btn_description"
        android:onClick="profileBtnOnClick"
        android:src="@drawable/ic_dflt_profile"
        android:theme="@style/AppTheme.TopBar.ImageButton"
        android:tooltipText="@string/profile_btn_description"
        tools:targetApi="o" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchbar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:theme="@style/AppTheme.TopBar.SearchBar"
        app:closeIcon="@null"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:queryHint="@string/searchbar_hint"
        app:searchIcon="@null" />

    <ImageButton
        android:id="@+id/upload_btn"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:background="@android:color/transparent"
        android:contentDescription="@string/upload_btn_description"
        android:onClick="uploadBtnClick"
        android:src="@drawable/ic_upload_button"
        android:theme="@style/AppTheme.TopBar.ImageButton"
        android:tooltipText="@string/upload_btn_description"
        tools:targetApi="o" />
</LinearLayout>