<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/profile_lltopBar"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/profile_ibClose"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close"
            android:tint="@color/primaryAccent"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeTextType="uniform"
            android:gravity="center_vertical"
            android:padding="11dp"
            android:text="@string/profile_page_title"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/profile_ibLogout"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile_logout_btn_description"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_sign_out"
            android:tint="@color/primaryAccent"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_clProfileInfos"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_lltopBar">

        <ImageView
            android:id="@+id/profile_ivProfilePicture"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_dflt_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/profile_tvUsername"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="15sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:padding="11dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_ivProfilePicture" />

        <Button
            android:id="@+id/profile_btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryLight"
            android:text="@string/profile_login_button"
            android:textColor="@color/primaryAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_ivProfilePicture" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profile_tbGalleries"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_vpGalleries"
        app:layout_constraintTop_toBottomOf="@+id/profile_clProfileInfos" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/profile_vpGalleries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tbGalleries" />

</androidx.constraintlayout.widget.ConstraintLayout>